# fmri-edm-ccm

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  test_manifest.json
configs/: cluster_words.csv  decoding.yaml  demo.yaml  encoding.yaml  paths.example.yaml  qaemb_questions.json  selection.yaml
notebooks/: Day10_pyEDM_Demo.ipynb  Day11_pyEDM_Sweep.ipynb  Day16_decoding.ipynb  Day17_CategoryFeaturization.ipynb  Day18_single_story.ipynb  Day19_smooth_categories.ipynb  Day1_Exploration.ipynb  Day20_batch_category_export.ipynb  Day21_batch_category_export.ipynb  Day22_category_mde.ipynb  Day23_transcript_repair.ipynb  Day24_subject_concat.ipynb  Day25_bleed_correction.ipynb  Day26_ROI_Selection_Visualizer.ipynb  Day26_category_overlay.ipynb  Day26_category_overlay_subject_sweep.ipynb  Day26_category_overlay_sweep.ipynb  Day26_option_comparison_subject.ipynb  Day26_smoothing_mde_tuning.ipynb  Day27_karaoke_category_video.ipynb  Day28_karaoke_category_video_llm.ipynb  Day29_karaoke_qaemb_video_all_questions.ipynb  Day2_Subject_EDM_CCM.ipynb  Day3_Subject_EDM.ipynb  Day4_Phase1_Subject_ROI.ipynb  Day5_Language_ROI_Attractors.ipynb  Day8_Semantic_Prediction.ipynb  Day9_One_Subject_Demo.ipynb  DayXX_Golay_versus_EMM.ipynb  DayXX_qaemb_timeseries.ipynb  MDE_manifold_visualization.ipynb  QAEmb_PerQuestion_Plots.ipynb  export_llm_embeddings.ipynb  mde_drift_diagnostics.ipynb
scripts/: day18_story_cache_13125057-0.out  day18_story_cache_13125483-0.out  day18_story_cache_19786281-0.out  day18_story_cache_19786283-1.out  (+3677 more)
src/: ccm.py  (+14 more)
(+25 files in other folders)
